BUG-2845624: integrate patch to support external directories via the one-jar.class.path.